# hackathon_spring_2026

./: .gitignore  README.md  YouTube_gen_smol.json
amazon_links_db/: amazon_products.db  setup_db.py
scripts/: amazon_link_scraper.py  comfy_test.py  comfy_test2.py  fetch_test.py  ollama_run_test.py  scrape.py  scraping_crewai.py  tts.py  tweets.py  uploader.py  video_model_test.py
video_mock_server/: mock_comfy_server.py
youtube_crew/: README.md  latest_product_data.md  pyproject.toml  youtube_final_video.md  youtube_image_description.md  youtube_scene_image.md  youtube_short.md  youtube_short_tts.md  youtube_upload.md  youtube_video.md
youtube_crew/src/youtube_crew/: crew.py  main.py
youtube_crew/src/youtube_crew/config/: agents.yaml  tasks.yaml
youtube_crew/src/youtube_crew/tools/: __init__.py  amazon_content_scrape_tool.py  amazon_link_scrape_tool.py  api_tts_tool.py  api_video_gen_tool.py  comfyui_tool.py  edge_tts_tool.py  get_link_from_db.py  image_discription_gen_tool.py  openrouter_scene_image_tool.py  video_fusion_tool.py  youtube_uploader_tool.py
